@@ -1,3 +1,8 @@
+2005-06-08  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* applet.c: (select_track), (select_element_and_track), (cb_gconf):
+	  Backport #168040 and #301014 from HEAD.
+
 2005-04-15  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* load.c: (create_mixer_collection): Plug a few leaks.
